--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <div id="container">
   <app-topnav></app-topnav>
-
+  <div class="w3-sidebar w3-bar-block w3-animate-left overlay" style="display:none;z-index:5" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-large" style="padding-top: 0px;" (click)="on_close()">Close &times;</button>
+    <a routerLink="enterresults" class="w3-bar-item w3-button">Enter Results</a>
+    <a routerLink="viewresults" class="w3-bar-item w3-button">View Results</a>
+  </div>
+  
+  <div class="w3-overlay w3-animate-left" (click)="on_close()"  style="cursor:pointer" id="myOverlay"></div>
+  
+  <div>
+    <button class="w3-button w3-white w3-xxlarge" (click)="on_open()">&#9776;</button>
+  </div>
   <div id="content">
     <router-outlet></router-outlet>
   </div>
