--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,3 +1,5 @@
 .overlay{
-    background-color: rgba(46, 44, 44, 0.322);
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-weight: bold;
 }
